# autoresearch

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
eval_bilingual_stt/: README.md  bilingual_stt_events.json  eval_routing_accuracy.py  extract_stt_events.py  spotcheck.py  transcribe_oracle.py
eval_bilingual_stt/eval_results/: aggregate.json  per_call.json  spotcheck_5c7c8787.txt
eval_bilingual_stt/eval_results/oracle/: 00502583-0a75-c1f6-720b-532cc8db2f57.json  029715d9-298d-2283-d703-736488298114.json  0444b6a5-0e8d-3918-19ab-15111ecc0bd7.json  06183ad9-377f-7b49-8920-5e3dbb8dc2ca.json  06f37cb7-68b1-aa5d-13ac-4d61b7f04a2b.json  06f48236-d636-dacc-79e5-1384a2ca5549.json  0789290b-e6b3-70c3-dc8f-eaf9cf9d11b4.json  0939742d-0a38-c673-371d-4b7a81ec33a6.json  095ca8ca-bcbd-b583-f9d2-06b17d02baf9.json  0a74e0e3-7ffb-af11-c368-4a4001d7a856.json  0b7555bf-a96c-8150-6624-e74bb90ca39f.json  0b8d4157-f93f-3064-ef2e-92c365c77367.json  0be56290-792d-b613-796b-70e92b433f15.json  0bf5fc8a-f648-9ec9-67e6-9770fb4a0ba7.json  0c33f6c1-1194-a086-d82f-2ace912872f1.json  0c349e20-b253-caa3-0ad5-b7dc09e1c511.json  0c9ad63d-7f93-0423-651a-0b0df711e773.json  0d8bc0b5-0464-187f-cc7b-8e17e66dd42c.json  0da9da78-9a17-04f9-7539-48d96f870044.json  0e1bcedf-daa9-15f8-6dfd-4e9fc6d52af7.json  0e2c9a68-1581-e87d-6474-f153e00f75bf.json  0f90e35a-53bb-4bb9-310b-3b0cba835e3f.json  10bb4cd6-27cc-2ecd-5ccf-26ab043990fd.json  10ca3ca2-8a65-7b98-8b17-b07f2edf095d.json  10ca864a-2b6c-f506-0fbd-950c89e32ddb.json  1123eb10-da55-bd52-de94-ea19c69229f0.json  (+502 more)
