[project]
name = "autoresearch-language-switch"
version = "0.1.0"
description = "Self-contained bilingual STT forwarding replay benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fast-langdetect>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["prepare", "train"]
